adicionado testes para health-check service